# outlook-category

./: .gitignore  Export-OutlookCategoriesToJson.ps1  Get-OutlookCategories.ps1  README.md  dodo.py  openapi.yaml  pyproject.toml  validate_data.py  validate_schema.py
powershell/: Export-OutlookCategoriesToJson.ps1
schemas/: OutlookCategory.json  OutlookCategory.yaml  OutlookCategoryArray.json  OutlookCategoryArray.yaml  OutlookCategorySimplified.yaml
scripts/: print_outlook_categories_schema.py  print_outlook_category_schema.py  print_outlook_category_schema_alias.py
src/: Export_OutlookCategoriesToJson.py
src/outlook_categories/: get_outlook_categories.py  models.py
tests/: test_get_outlook_categories.py  test_get_outlook_categories_schema.py  test_validate_data.py  test_validate_schema.py
validator/: validate_schema.py
