[project]
name = "outlook-category-validator"
version = "1.0.0"
requires-python = ">=3.9"
description = "Validator for OutlookCategory.json JSON Schema (Draft 2020-12)"

authors = [
  { name = "Takashi Sasaki", email = "takashi316@gmail.com" }
]

dependencies = [
  "jsonschema[format]>=4.18.0"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
doit = ">=0.36.0"
ruff = "^0.4.1"
black = "^23.12.1"
pre-commit = "^3.6.0"
pytest = "^8.1.1"

[tool.doit]
backend = "json"
